# dea-pyhton-video-dowanloder-software

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
src/python_dea/: __init__.py  cli.py  gui.py
tests/: test_download.py
