[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-dea"
dynamic = ["version"]
authors = [{name = "BlackBOXAI", email = "example@email.com"}]
description = "Open-source Python Video Downloader with CLI and GUI"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
  "yt-dlp",
]

[project.optional-dependencies]
test = [
  "pytest",
]

[project.scripts]
dea = "python_dea.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

